<resources>
    <string name="app_name">MuteSometimes</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_mute_main" translatable="false">MuteMainActivity</string>
    <string name="title_home">Lists</string>
    <string name="title_dashboard">Time Setting</string>
    <string name="title_notifications">Location Setting</string>
    <string name="mute_loc_dec">"Mute Location Detection"</string>
    <string name="mute_time_dec">"Mute Time Detection"</string>
    <string name="turkish_button">"Turkish"</string>
    <string name="add_time_button">"Set Time"</string>
    <string name="add_this_loc">"Set Current Location"</string>
    <string name="add_loc">Set Location</string>
    <string name="radio_loc">Location List</string>
    <string name="radio_time">Time List</string>
    <string name="list_empty">List is Empty</string>
    <string name="progressBar">Services are Loading ... </string>
    <string name="slogan">Let Silence be your voice !</string>
    <string name="current_loc">Current Location</string>
    <string name="manuel_loc">Enter Manuelly</string>
    <string name="title">Title</string>
    <string name="longtitude">Longtitude Value</string>
    <string name="latitude">Latitude Value</string>
    <string name="settings">Settings</string>
    <string name="noTitle">No Title</string>
    <string name="delete">Delete</string>
    <string name="sametime">Same time is avaiable</string>
    <string name="sure">Are you sure to delete ?</string>
    <string name="active">Do you want to active ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="active2">Activating</string>
    <string name="sameloc">Same location is avaiable</string>


    <string-array name="Languages">

        <item>ENGLISH</item>
        <item>TÜRKÇE</item>

    </string-array>

</resources>