<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RadioGroup
        android:id="@+id/listradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/timelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_time"
            android:paddingRight="80dp"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/locationlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_loc"
            android:visibility="visible" />
    </RadioGroup>

    <TextView
        android:id="@+id/EmptyList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_empty"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/clocklist"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listradio"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="DuplicateClickableBoundsCheck">

    </ListView>

    <ListView
        android:id="@+id/locatedlist"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listradio"
        app:layout_constraintVertical_bias="0.25">


    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>